--- a/catalog.html
+++ b/catalog.html
@@ -23,21 +23,32 @@
 					<li><a href="#">О Компании</a></li>
 				</ul>
 				<div class="menu-search">
-					<span>Поиск</span>
 					<div class="sub-menu menu-search-sub">
-						<!--Здесь будет форма
-							Что ищем?-->
+						<form class="form-search" action="https://echo.htmlacademy.ru" method="post">
+							<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
+							<input id="main-search" type="search" name="search" placeholder="Что ищем?">
+							<button class="button button-search">Поиск</button>	
+						</form>
 					</div>
 				</div>
 				<div class="menu-login">
 					<a class="menu-item menu-item-login" href="#">Вход</a>
 					<div class="sub-menu menu-login-sub">
-						<!--Здесь будет форма:
-							Логин
-							Пароль
-							Войти-->
-						<a href="#">Забыли пароль</a>
-						<a href="#">Новая регистрация</a>
+						<form class="form-login" action="https://echo.htmlacademy.ru" method="post">
+							<p>
+								<label class="visual-hidden" for="login-email">Введите электронную почту</label>
+								<input id="login-email" type="email" name="email" placeholder="Электронная почта">
+							</p>
+							<p>
+								<label class="visual-hidden" for="login-password">Введите пароль</label>
+								<input id="login-password" type="password" name="password" placeholder="Пароль">
+							</p>
+							<p class="login-link">
+								<a href="#">Забыли пароль?</a>
+								<a href="#">Новая регистрация</a>
+							</p>
+							<button class="button button-login" type="submit">Войти</button>
+						</form>
 					</div>
 				</div>
 				<div class="menu-cart">
