Исправление слайдера на главной странице

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 				</ul>
-				<input class="visual-hidden" id="slider-toggle-raspberry" type="radio" name="toggle" checked>
-				<input class="visual-hidden" id="slider-toggle-lemon" type="radio" name="toggle">
-				<input class="visual-hidden" id="slider-toggle-strawberry" type="radio" name="toggle">
+				<input class="visual-hidden" id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
+				<input class="visual-hidden" id="slider-toggle-lemon" type="radio" name="toggle-lemon">
+				<input class="visual-hidden" id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">
 				<label for="slider-toggle-raspberry">Первый слайд</label>
 				<label for="slider-toggle-lemon">Второй слайд</label>
 				<label for="slider-toggle-strawberry">Третий слайд</label>
@@ -161,7 +161,7 @@
 				<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
 				<form class="form-subscribe" action="https://echo.htmlacademy.ru" method="post">
 					<p>
-						<label class="visual-hidden" for="">Введите электронную почту</label>
+						<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
 						<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
 					</p>
 					<button class="button" type="submit">Отправить</button>
