Добавляет разметку формы фильтра на страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -89,13 +89,80 @@
 				<li><a href="#"></a>Каталог</li>
 				<li class="bredcrumbs-current">Сливочное</li>
 			</ul>
-			<section>
-				<h2>Фильтр товаров</h2>
-				<!--Сортировка:
-					Цена:
-					Жирность:
-					Наполнители:
-					Применить-->
+			<section class="filters">
+				<h2 class="visual-hidden">Фильтр товаров</h2>
+				<form>
+					<ul class="filters-list">
+						<li class="filters-item filters-item-sort">
+							<h2 class="filters-item-contents">Сортирровка:</h2>
+							<select id="filters-item-sort" name="sort">
+								<option selected>по популярности</option>
+								<option>сначала недорогие</option>
+								<option>сначала дорогие</option>
+								<option>по жирности</option>
+							</select>
+						</li>
+
+						<li class="filters-item filters-item-price">
+							<h2 class="filters-item-contents">Цена 100 руб. - 500 руб.</h2>
+							<div class="filter-item-price-scale">
+								<div class="scale">
+									<div class="bar"></div>
+								</div>
+								<div class="filters-item-price-toggle filters-item-price-toggle-min"></div>
+								<div class="filters-item-price-toggle filters-item-price-toggle-max"></div>
+							</div>
+						</li>
+					
+						<li class="filters-item filters-item-richness">
+							<h2 class="filters-contents">Жирность:</h2>
+							<ul class="richness-list">
+								<li>
+									<label for="richness-0">0%</label>
+									<input class="visual-hidden" id="richness-0" type="radio" name="0">		
+								</li>
+								<li>
+									<label for="richness-10">до 10%</label>
+									<input class="visual-hidden" id="richness-10" type="radio" name="10">		
+								</li>
+								<li>
+									<label for="richness-30">до 30%</label>
+									<input class="visual-hidden" id="richness-30" type="radio" name="30">		
+								</li>
+								<li>
+									<label for="richness-30-above">выше 30%</label>
+									<input class="visual-hidden" id="richness-30-above" type="radio" name="30-above">
+								</li>
+							</ul>	
+						</li>
+						<li class="filters-item filters-item-fillers">
+							<h2 class="filters-item-contents">Наполнители:</h2>
+							<ul class="fillers-list">
+								<li>
+									<label for="fillers-choco">шоколадные</label>
+									<input class="visual-hidden" id="fillers-choco" type="checkbox" name="choco">
+								</li>
+								<li>
+									<label for="fillers-sugar">сахарные присыпки</label>
+									<input class="visual-hidden" id="fillers-sugar" type="checkbox" name="sugar">
+								</li>
+								<li>
+									<label for="fillers-fruit">фрукты</label>
+									<input class="visual-hidden" id="fillers-fruit" type="checkbox" name="fruit">
+								</li>
+								<li>
+									<label for="fillers-syrups">сиропы</label>
+									<input class="visual-hidden" id="fillers-syrups" type="checkbox" name="syrups">
+								</li>
+								<li>
+									<label for="fillers-jam">джемы</label>
+									<input class="visual-hidden" id="fillers-jam" type="checkbox" name="jam">
+								</li>
+							</ul>
+						</li>
+					</ul>
+					<button class="button button-filters" type="submit">Применить</button>
+				</form>
 			</section>
 			<section class="catalog">
 				<h2 class="visual-hidden">Список сливочного мороженого</h2>
