ИСправляет разметку слайдера на главной странице

--- a/index.html
+++ b/index.html
@@ -80,12 +80,20 @@
 						<a class="button button-slider" href="#">Давайте оба!</a>
 					</li>
 				</ul>
-				<input class="visual-hidden" id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
-				<input class="visual-hidden" id="slider-toggle-lemon" type="radio" name="toggle-lemon">
-				<input class="visual-hidden" id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">
-				<label for="slider-toggle-raspberry">Первый слайд</label>
-				<label for="slider-toggle-lemon">Второй слайд</label>
-				<label for="slider-toggle-strawberry">Третий слайд</label>
+				<ul class="slider-toggle-list">
+					<li>
+						<label for="slider-toggle-raspberry">Первый слайд</label>
+						<input class="visual-hidden" id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
+					</li>
+					<li>
+						<label for="slider-toggle-lemon">Второй слайд</label>
+						<input class="visual-hidden" id="slider-toggle-lemon" type="radio" name="toggle-lemon">		
+					</li>
+					<li>
+						<label for="slider-toggle-strawberry">Третий слайд</label>
+						<input class="visual-hidden" id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">		
+					</li>
+				</ul>
 			</section>
 			<section class="banners">
 				<h2 class="visual-hidden">Акции</h2>
