--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 		<title>HTML Academy: Глейси</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&amp;subset=cyrillic" rel="stylesheet">
 		<link href="css/normalize.css" rel="stylesheet">
-  		<link href="css/style.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="main-header">
 			<nav class="main-navigation">
 				<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
 				<ul class="site-navigation">
-					<li>
+					<li class="site-navigation-item">
 						<a href="#">Каталог</a>
 						<ul class="site-navigation-sub">
 							<li><a href="#"><b>Новинки</b></a></li>
@@ -22,8 +22,8 @@
 							<li><a href="#">Мелорин</a></li>
 						</ul>
 					</li>
-					<li><a href="#">Доставка и оплата</a></li>
-					<li><a href="#">О Компании</a></li>
+					<li class="site-navigation-item"><a href="#">Доставка и оплата</a></li>
+					<li class="site-navigation-item"><a href="#">О Компании</a></li>
 				</ul>
 				<div class="menu-search">
 					<div class="sub-menu menu-search-sub">
