Добавляет стилизацию слайдера на главной странице

--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
 				</ul>
 				<ul class="slider-toggle-list">
 					<li>
-						<label for="slider-toggle-raspberry">Первый слайд</label>
+						<label class="slider-toggle-item" for="slider-toggle-raspberry">Первый слайд</label>
 						<input class="visual-hidden" id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
 					</li>
 					<li>
-						<label for="slider-toggle-lemon">Второй слайд</label>
+						<label class="slider-toggle-item" for="slider-toggle-lemon">Второй слайд</label>
 						<input class="visual-hidden" id="slider-toggle-lemon" type="radio" name="toggle-lemon">		
 					</li>
 					<li>
-						<label for="slider-toggle-strawberry">Третий слайд</label>
+						<label class="slider-toggle-item" for="slider-toggle-strawberry">Третий слайд</label>
 						<input class="visual-hidden" id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">		
 					</li>
 				</ul>
