--- a/index.html
+++ b/index.html
@@ -168,15 +168,17 @@
 				<p>Новое в нашем блоге</p>
 			</article>
 			<section class="subscribe">
-				<h2 class="visual-hidden">Подписка на рассылку</h2>
-				<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-				<form class="form-subscribe" action="https://echo.htmlacademy.ru" method="post">
-					<p>
-						<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
-						<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
-					</p>
+				<div class="subscribe-front">
+					<h2 class="visual-hidden">Подписка на рассылку</h2>
+					<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+					<form class="form-subscribe" action="https://echo.htmlacademy.ru" method="post">
+						<p>
+							<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
+							<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
+						</p>
 					<button class="button" type="submit">Отправить</button>
-				</form>
+					</form>
+				</div>
 			</section>
 			<section class="contacts">
 				<h2 class="visual-hidden">Как добраться</h2>
