--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 			</section>
 			<section class="contacts">
 				<h2 class="visual-hidden">Как добраться</h2>
-				<img class="map" src="img/map.jpg" width="1200" height="428" alt="Карта">
+				<img class="map" src="img/map.jpg" width="1200" height="428" alt="Ул. Большая Конюшенная 19/8 Санкт Питербург">
 				<div class="feedback">
 					<p class="feedback-address">
 						Адрес главного офиса<br>
