Добавляет стилизацию футера на главной странице

--- a/index.html
+++ b/index.html
@@ -204,8 +204,8 @@
 				<ul>
 					<li><a class="button-social button-social-tw" href="#">Твиттер</a></li>
 					<li><a class="button-social button-social-ig" href="#">Инстаграм</a></li>
-					<li><a class="button-social button-social-fb" href="#"></a>Фейсбук</li>
-					<li><a class="button-social button-social-vk" href="#"></a>Вконтакте</li>
+					<li><a class="button-social button-social-fb" href="#">Фейсбук</a></li>
+					<li><a class="button-social button-social-vk" href="#">Вконтакте</a></li>
 				</ul>
 			</div>
 			<ul class="footer-link-list">
