Добавляет стилизацию полей на глайной странице

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				</ul>
 				<div class="menu-search">
 					<div class="sub-menu menu-search-sub">
-						<form class="form-search" action="https://echo.htmlacademy.ru" method="post">
+						<form class="from form-search" action="https://echo.htmlacademy.ru" method="post">
 							<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
 							<input id="main-search" type="search" name="search" placeholder="Что ищем?">
 							<button class="button button-search">Поиск</button>	
@@ -37,7 +37,7 @@
 				<div class="menu-login">
 					<a class="menu-item menu-item-login" href="#">Вход</a>
 					<div class="sub-menu menu-login-sub">
-						<form class="form-login" action="https://echo.htmlacademy.ru" method="post">
+						<form class="form form-login" action="https://echo.htmlacademy.ru" method="post">
 							<p>
 								<label class="visual-hidden" for="login-email">Введите электронную почту</label>
 								<input id="login-email" type="email" name="email" placeholder="Электронная почта">
@@ -171,7 +171,7 @@
 				<div class="subscribe-front">
 					<h2 class="visual-hidden">Подписка на рассылку</h2>
 					<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-					<form class="form-subscribe" action="https://echo.htmlacademy.ru" method="post">
+					<form class="form form-subscribe" action="https://echo.htmlacademy.ru" method="post">
 						<p>
 							<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
 							<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
@@ -221,7 +221,7 @@
 		</footer>
 		<section class="modal modal-feedback">
 			<b>Мы обязательно вам ответим!</b>
-			<form class="form-feedback" action="https://echo.htmlacademy.ru" method="post">
+			<form class="form form-feedback" action="https://echo.htmlacademy.ru" method="post">
 				<p>
 					<label class="visual-hidden" for="feedback-name">Введите имя</label>
 					<input id="feedback-name" type="text" name="name" placeholder="Как вас зовут?">
