Добавляет стилизацию хедера на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -14,13 +14,6 @@
 				<ul class="site-navigation">
 					<li class="site-navigation-current">
 						<a href="#">Каталог</a>
-						<ul class="site-navigation-sub">
-							<li><a href="#"><b>Новинки</b></a></li>
-							<li class="sub-current">Сливочное</li>
-							<li><a href="#">Щербеты</a></li>
-							<li><a href="#">Фруктовый лед</a></li>
-							<li><a href="#">Мелорин</a></li>
-						</ul>
 					</li>
 					<li><a href="#">Доставка и оплата</a></li>
 					<li><a href="#">О Компании</a></li>
@@ -37,7 +30,7 @@
 				<div class="menu-login">
 					<a class="menu-item menu-item-login" href="#">Вход</a>
 					<div class="sub-menu menu-login-sub">
-						<form class="form-login" action="https://echo.htmlacademy.ru" method="post">
+						<form class="form form-login" action="https://echo.htmlacademy.ru" method="post">
 							<p>
 								<label class="visual-hidden" for="login-email">Введите электронную почту</label>
 								<input id="login-email" type="email" name="email" placeholder="Электронная почта">
@@ -55,7 +48,7 @@
 					</div>
 				</div>
 				<div class="menu-cart">
-					<a class="menu-item menu-item-cart" href="#">Корзина</a>
+					<a class="menu-item menu-item-cart menu-item-cart-full" href="#">Корзина</a>
 					<div class="sub-menu menu-cart-sub">
 						<table class="cart-table">
 							<tr class="cart-table-item">
@@ -169,7 +162,7 @@
 			<section class="catalog">
 				<h2 class="visual-hidden">Список сливочного мороженого</h2>
 				<ul class="catalog-list">
-					<li class="catalog-item">
+					<li class="hits-item">
 						<h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
 						<b>310₽</b>
 						<span>/кг</span>
