Добавляет стилизацию корзины на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -52,7 +52,7 @@
 					<div class="sub-menu menu-cart-sub">
 						<table class="cart-table">
 							<tr class="cart-table-item">
-								<td class="cart-table-item-del">X</td>
+								<td class="cart-table-item-del"><button class="modal-close">Убрать из корзины</button></td>
 								<td class="cart-table-item-image"></td>
 								<td class="cart-table-item-text"><a href="#">Пломбир с апельсиновым джемом</a></td>
 								<td class="cart-table-item-weight"><span>1,5</span> кг x</td>
@@ -60,7 +60,7 @@
 								<td class="cart-table-item-price">300 руб.</td>
 							</tr>
 							<tr class="cart-table-item">
-								<td class="cart-table-item-del">X</td>
+								<td class="cart-table-item-del"><button class="modal-close">Убрать из корзины</button></td>
 								<td class="cart-table-item-image"></td>
 								<td class="cart-table-item-text"><a href="#">Клубничный пломбир с присыпкой из белого шоколада</a></td>
 								<td class="cart-table-item-weight"><span>1,5</span> кг x</td>
@@ -82,7 +82,7 @@
 			<h1 class="page-title">Сливочное мороженое</h1>
 			<ul class="bredcrumbs">
 				<li><a href="index.html">Главная</a></li>
-				<li><a href="#"></a>Каталог</li>
+				<li><a href="#">Каталог</a></li>
 				<li class="bredcrumbs-current">Сливочное</li>
 			</ul>
 			<section class="filters">
