Добавляет стилизацию блока фильтров на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -87,7 +87,7 @@
 			</ul>
 			<section class="filters">
 				<h2 class="visual-hidden">Фильтр товаров</h2>
-				<form class="form-filters" action="https://echo.htmlacademy.ru" method="post">
+				<form class="from form-filters" action="https://echo.htmlacademy.ru" method="post">
 					<fieldset class="filters-item filters-item-sort">
 						<legend>Сортировка:</legend>
 						<select id="filters-item-sort" name="sort">
@@ -110,7 +110,7 @@
 					</fieldset>
 					
 					<fieldset class="filters-item filters-item-richness">
-						<legend>Жирность:</legend>>
+						<legend>Жирность:</legend>
 						<ul class="richness-list">
 							<li>
 								<label for="richness-0">0%</label>
