Добавляет стилизацию пагинации на странице каталога

--- a/catalog.html
+++ b/catalog.html
@@ -251,6 +251,7 @@
 					<!-------------------------------- конец 3 ряда -------------------------------->
 				</ul>
 				<ul class="pagination-list">
+					<li class="pagination-item pagination-item-off"><a><</a></li>
 					<li class="pagination-item pagination-item-current"><a>1</a></li>
 					<li class="pagination-item"><a href="#">2</a></li>
 					<li class="pagination-item"><a href="#">3</a></li>
