--- a/index.html
+++ b/index.html
@@ -9,59 +9,66 @@
 	</head>
 	<body>
 		<header class="main-header">
-			<nav class="main-navigation">
-				<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
-				<ul class="site-navigation">
-					<li class="site-navigation-item">
-						<a href="#">Каталог</a>
-						<ul class="site-navigation-sub">
-							<li><a href="#"><b>Новинки</b></a></li>
-							<li><a href="catalog.html">Сливочное</a></li>
-							<li><a href="#">Щербеты</a></li>
-							<li><a href="#">Фруктовый лед</a></li>
-							<li><a href="#">Мелорин</a></li>
+			<div class="container-header">	
+				<nav class="main-navigation">
+					<div class="container main-container">
+						<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
+						<ul class="site-navigation">
+							<li class="site-navigation-item">
+								<a class="site-navigation-catalog" href="#">Каталог</a>
+								<ul class="visual-hidden site-navigation-sub">
+									<li><a href="#"><b>Новинки</b></a></li>
+									<li><a href="catalog.html">Сливочное</a></li>
+									<li><a href="#">Щербеты</a></li>
+									<li><a href="#">Фруктовый лед</a></li>
+									<li><a href="#">Мелорин</a></li>
+								</ul>
+							</li>
+							<li class="site-navigation-item"><a href="#">Доставка и оплата</a></li>
+							<li class="site-navigation-item"><a href="#">О Компании</a></li>
 						</ul>
-					</li>
-					<li class="site-navigation-item"><a href="#">Доставка и оплата</a></li>
-					<li class="site-navigation-item"><a href="#">О Компании</a></li>
-				</ul>
-				<div class="menu-search">
-					<div class="sub-menu menu-search-sub">
-						<form class="from form-search" action="https://echo.htmlacademy.ru" method="post">
-							<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
-							<input id="main-search" type="search" name="search" placeholder="Что ищем?">
-							<button class="button button-search">Поиск</button>	
-						</form>
 					</div>
-				</div>
-				<div class="menu-login">
-					<a class="menu-item menu-item-login" href="#">Вход</a>
-					<div class="sub-menu menu-login-sub">
-						<form class="form form-login" action="https://echo.htmlacademy.ru" method="post">
-							<p>
-								<label class="visual-hidden" for="login-email">Введите электронную почту</label>
-								<input id="login-email" type="email" name="email" placeholder="Электронная почта">
-							</p>
-							<p>
-								<label class="visual-hidden" for="login-password">Введите пароль</label>
-								<input id="login-password" type="password" name="password" placeholder="Пароль">
-							</p>
-							<p class="login-link">
-								<a href="#">Забыли пароль?</a>
-								<a href="#">Новая регистрация</a>
-							</p>
-							<button class="button button-login" type="submit">Войти</button>
-						</form>
+					<div class="container main-container">
+						<div class="menu-search">
+							<div class="sub-menu menu-search-sub">
+								<form class="visual-hidden from form-search" action="https://echo.htmlacademy.ru" method="post">
+									<label class="visual-hidden" for="main-search">Введите информацию для поиска</label>
+									<input id="main-search" type="search" name="search" placeholder="Что ищем?">
+									<button class="button button-search">Поиск</button>	
+								</form>
+							</div>
+						</div>
+						<div class="menu-login">
+							<a class="menu-item menu-item-login" href="#">Вход</a>
+							<div class="visual-hidden sub-menu menu-login-sub">
+								<form class="form form-login" action="https://echo.htmlacademy.ru" method="post">
+									<p>
+										<label class="visual-hidden" for="login-email">Введите электронную почту</label>
+										<input id="login-email" type="email" name="email" placeholder="Электронная почта">
+									</p>
+									<p>
+										<label class="visual-hidden" for="login-password">Введите пароль</label>
+										<input id="login-password" type="password" name="password" placeholder="Пароль">
+									</p>
+									<p class="login-link">
+										<a href="#">Забыли пароль?</a>
+										<a href="#">Новая регистрация</a>
+									</p>
+									<button class="button button-login" type="submit">Войти</button>
+								</form>
+							</div>
+						</div>
+						<div class="menu-cart">
+							<a class="menu-item menu-item-cart" href="#">Пусто</a>
+						</div>
 					</div>
-				</div>
-				<div class="menu-cart">
-					<a class="menu-item menu-item-cart" href="#">Корзина</a>
-				</div>
-			</nav>
-			<p class="main-contacts">
-				С 10 до 20, ежедневно<br>
-				<b>8 812 450-25-25</b>
-			</p>
+					
+				</nav>
+				<p class="main-contacts">
+					С 10 до 20, ежедневно<br>
+					<b>8 812 450-25-25</b>
+				</p>
+			</div>
 		</header>
 		<main class="container">
 			<h1 class="visual-hidden">Магазин Глейси</h1>
