--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
 				</ul>
 				<ul class="slider-toggle-list">
 					<li>
-						<label class="slider-toggle-item" for="slider-toggle-raspberry">Первый слайд</label>
-						<input class="visual-hidden" id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
+						<label class="visual-hidden slider-toggle-item" for="slider-toggle-raspberry">Первый слайд</label>
+						<input id="slider-toggle-raspberry" type="radio" name="toggle-raspberry" checked>
 					</li>
 					<li>
-						<label class="slider-toggle-item" for="slider-toggle-lemon">Второй слайд</label>
-						<input class="visual-hidden" id="slider-toggle-lemon" type="radio" name="toggle-lemon">		
+						<label class="visual-hidden  slider-toggle-item" for="slider-toggle-lemon">Второй слайд</label>
+						<input id="slider-toggle-lemon" type="radio" name="toggle-lemon">		
 					</li>
 					<li>
-						<label class="slider-toggle-item" for="slider-toggle-strawberry">Третий слайд</label>
-						<input class="visual-hidden" id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">		
+						<label class="visual-hidden  slider-toggle-item" for="slider-toggle-strawberry">Третий слайд</label>
+						<input id="slider-toggle-strawberry" type="radio" name="toggle-strawberry">		
 					</li>
 				</ul>
 			</section>
