--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<header class="main-header">
 			<div class="container-header">	
 				<nav class="main-navigation">
-					<div class="container main-container">
+					<div class="container navigation-container">
 						<img class="main-logo" src="img/logo.svg" width="154" height="64" alt="Логотип магазина Глейси">
 						<ul class="site-navigation">
 							<li class="site-navigation-item">
@@ -28,7 +28,7 @@
 							<li class="site-navigation-item"><a href="#">О Компании</a></li>
 						</ul>
 					</div>
-					<div class="container main-container">
+					<div class="container navigation-container">
 						<div class="menu-search">
 							<div class="sub-menu menu-search-sub">
 								<form class="visual-hidden from form-search" action="https://echo.htmlacademy.ru" method="post">
@@ -70,7 +70,7 @@
 				</p>
 			</div>
 		</header>
-		<main class="container">
+		<main class="container main-container">
 			<h1 class="visual-hidden">Магазин Глейси</h1>
 			<section class="slider">
 				<ul class="slider-list">
