Добавляет раскладку для блоков новостей и подписки на главной странице

--- a/index.html
+++ b/index.html
@@ -170,23 +170,25 @@
 					</li>
 				</ul>
 			</section>
-			<article class="blog-news">
-				<a class="blog-news-link" href="#"><h3>10 способов сервировки фруктовых щербетов к столу</h3></a>
-				<p>Новое в нашем блоге</p>
-			</article>
-			<section class="subscribe">
-				<div class="subscribe-front">
-					<h2 class="visual-hidden">Подписка на рассылку</h2>
-					<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-					<form class="form form-subscribe" action="https://echo.htmlacademy.ru" method="post">
-						<p>
-							<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
-							<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
-						</p>
-					<button class="button" type="submit">Отправить</button>
-					</form>
-				</div>
-			</section>
+			<div class="container row-container">
+				<article class="blog-news">
+					<a class="blog-news-link" href="#"><h3>10 способов сервировки фруктовых щербетов к столу</h3></a>
+					<p>Новое в нашем блоге</p>
+				</article>
+				<section class="subscribe">
+					<div class="subscribe-front">
+						<h2 class="visual-hidden">Подписка на рассылку</h2>
+						<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+						<form class="form form-subscribe" action="https://echo.htmlacademy.ru" method="post">
+							<p>
+								<label class="visual-hidden" for="subscribe-email">Введите электронную почту</label>
+								<input id="subscribe-email" type="email" name="email" placeholder="Электронная почта">
+							</p>
+						<button class="button" type="submit">Отправить</button>
+						</form>
+					</div>
+				</section>
+			</div>
 			<section class="contacts">
 				<h2 class="visual-hidden">Как добраться</h2>
 				<img class="map" src="img/map.jpg" width="1200" height="428" alt="Ул. Большая Конюшенная 19/8 Санкт Питербург">
