Добавляет раскладку для блока контактной информации на главной странице

--- a/index.html
+++ b/index.html
@@ -209,23 +209,25 @@
 			</section>
 		</main>
 		<footer class="main-footer">
-			<div class="footer-social">
-				<ul>
-					<li><a class="button-social button-social-tw" href="#">Твиттер</a></li>
-					<li><a class="button-social button-social-ig" href="#">Инстаграм</a></li>
-					<li><a class="button-social button-social-fb" href="#">Фейсбук</a></li>
-					<li><a class="button-social button-social-vk" href="#">Вконтакте</a></li>
+			<div class="container">
+				<div class="footer-social">
+					<ul>
+						<li><a class="button-social button-social-tw" href="#">Твиттер</a></li>
+						<li><a class="button-social button-social-ig" href="#">Инстаграм</a></li>
+						<li><a class="button-social button-social-fb" href="#">Фейсбук</a></li>
+						<li><a class="button-social button-social-vk" href="#">Вконтакте</a></li>
+					</ul>
+				</div>
+				<ul class="footer-link-list">
+					<li><a class="footer-link-item" href="#"><b>Для поставщиков</b></a></li>
+					<li><a class="footer-link-item" href="#">О производстве</a></li>
+					<li><a class="footer-link-item" href="#">Наши документы</a></li>
+					<li><a class="footer-link-item" href="#">Экологические стандарты</a></li>
 				</ul>
-			</div>
-			<ul class="footer-link-list">
-				<li><a class="footer-link-item" href="#"><b>Для поставщиков</b></a></li>
-				<li><a class="footer-link-item" href="#">О производстве</a></li>
-				<li><a class="footer-link-item" href="#">Наши документы</a></li>
-				<li><a class="footer-link-item" href="#">Экологические стандарты</a></li>
-			</ul>
-			<div class="footer-copyright">
-				<a class="footer-copyright-button" href="https://htmlacademy.ru/intensive/htmlcss"></a>
-				<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
+				<div class="footer-copyright">
+					<a class="footer-copyright-button" href="https://htmlacademy.ru/intensive/htmlcss"></a>
+					<p>Сделано в <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
+				</div>
 			</div>
 		</footer>
 		<section class="modal modal-feedback">
